static/stylesheets/scss/theme.scss
/* ... */
table.table-grid tr td{
  .toggle.expand,
  .toggle.collapse{
    line-height: 16px;
    padding: 0;
    border: none; // Remove default button styles
  }
}


@media (min-width: $screen-sm-min) {
  .sitemap-footer{
    .internal-links,
    .external-links{
      border-top: none;
      margin-top: 0;
      padding-top: 0;
    }
    .external-links{
      border-left: 1px solid $gray-light;
    }
  }
}

// Investments
#districts-map-container{
  position: relative;
  height: 0;
  width: 100%;
  padding: 0;
  margin: 0 auto;
  padding-bottom: 119%;

  @media (min-width: 620px) {
    width: 600px;
    padding-bottom: 100%;
  }
  @media (min-width: $screen-md-min) {
    padding-bottom: 76%;
  }
  @media (min-width: $screen-lg-min) {
    padding-bottom: 66%;
  }
}

#districts-map{
  position: absolute;
  height: 100%;
  width: 100%;
  left: 0;
  top: 0;

  path{
    fill: #F1F1F1;
    stroke: #555555;
    stroke-width: 1px;
    cursor:pointer;

    &:hover{
      fill: #e0e0e0;
      stroke: $gray-darker;;
      stroke-width: 1.5px;
    }
  }

  circle{
    fill: $brand-primary;
  }

  text{
    font-size: 11px;
    fill: $gray-darker;
    text-shadow: 1px 1px 0 #f1f1f1, -1px -1px 0 #f1f1f1;
  }

  circle,
  text{
    pointer-events: none;
  }
}

.investments table.table-grid tr.indent-1 td:first-child{
  font-size: 1em;
}

.admin-content {

  .data-panel{
    margin: $grid-gutter-width 0 0;
  }

  .panel{
    background: $brand-secondary;
    margin-bottom: $grid-gutter-width;
    border: none;

    h3{
      margin: $grid-gutter-width/2 auto 2*$grid-gutter-width/3;
    }
  }

  .panel-content{
    text-transform: none;
    padding-left: 2*$grid-gutter-width/3;
    padding-right: 2*$grid-gutter-width/3;

    > p{
      margin-bottom: $grid-gutter-width/2;
    }
  }

  #data-download{
    max-width: 480px;
  }

  .data-output{
    display: none;
    font-size: 1.5rem;
    padding: $grid-gutter-width/2;
    background: white;
    overflow-x: scroll;
    margin: $grid-gutter-width/3 0;

    .loading img{
      margin-right: $grid-gutter-width/3;
    }
  }

  .btn-primary{
    font-size: 1.5rem;
    margin: $grid-gutter-width/3 0;
  }
}

.investments-content .alert-data-update {
  margin-bottom: $grid-gutter-width/6;
}

.investment-line-intro {
  font-size: 1.125em;
  font-weight: 600;
  text-align: center;
  padding: 0 $grid-gutter-width/2;
  margin-bottom: 2*$grid-gutter-width/3;

  a{
    font-weight: 400;
  }
}

.investments-content #totals-panel .total-special{
    .main-special-label, .not-attributable-special-label{
      padding-left: $grid-gutter-width;
    }

    > div, p{
      font-weight: 200;
    }
}

